turtleart.disktwo.DiskTwo.scala.error
Erreur de compilation :
DiskTwo:8: error: not found: value setColeur
    setColeur(Color.black)
    ^DiskTwo:10: error: not found: value setColeur
    setColeur(Color.red)
    ^